--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = "0.29.1"
+#egui_extras = { version = "0.29.1" }
 toml = "0.8.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
