--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-eframe = "0.29.1"
-#egui_extras = { version = "0.29.1" }
-toml = "0.8.19"
+eframe = { version = "0.29.1", features = ["persistence"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.12.8", features = ["json", "blocking"] }
