--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.12.8", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
+rodio = { version = "*", features = ["symphonia-all"] }
